--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
+:root{
+    --bg-color:rgb(29, 29, 29);
+    --text-color: white;
+}
 body {
     display: flex;
     justify-content: center;
@@ -192,4 +195,41 @@ h1{
     display: flex;
     flex-direction: row;
     gap: 10px;
+}
+.info-banner{
+    width: 100vw;
+    height: 40px;
+    background-color: var(--bg-color);
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.5);
+}
+.info-banner>.info-content>img{
+    width: 30px;
+    height: 30px;
+    margin: auto 10px;
+    background-color: white;
+    border-radius: 50%;
+}
+.info-content{
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
+a{
+    color: var(--text-color);
+}
+a:hover{
+    color: rgb(242 163 25);
+}
+span{
+    color: var(--text-color);
+    text-align: center;
+    font-family:sans-serif;
+    transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    margin: auto 0px;
 }
